# transliterated-fragments

./: LICENSE  README.md  pyproject.toml
ebl/: 1868,0523.2.json  example.py  fragments.json
ebl/lemmatization/domain/: lemmatization.py
ebl/tests/transliteration/: test_line_label.py  test_parallel_line.py  test_parse_parallel_line.py  test_text.py
